Fix settings error alert missing paddings

--- a/authui/src/authflowv2/components/widget.css
+++ b/authui/src/authflowv2/components/widget.css
@@ -91,7 +91,7 @@
     @apply widget-content-item__px--settings;
   }
 
-  .widget-content__alert--settings {
+  .widget-content__alert-container--settings {
     @apply widget-content-item__px--settings;
   }
 }
